# simple_web_server

./: README.md
simple_server/: CMakeLists.txt  Makefile  main.c  setup.sh  setup_dir.sh
simple_server/cgi/: cgi.h  cgiExe.c
simple_server/flags/: flags.h
simple_server/requests/: checkHttp.c  checkMethod.c  getURI.c  parseRequest.c  requests.h
simple_server/response/: dirResponse.c  dirResponse.h  response.h
simple_server/sig_handlers/: reap.c  reap.h
simple_server/sockets/: createSocket_v4.c  createSocket_v4.h  createSocket_v6.c  createSocket_v6.h  handleConnection.c  handleSocket.c  socket.h
